Added authentication system, including remember me option

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,26 @@ security:
             lazy: true
             provider: app_user_provider
 
+            # Login feature
+            form_login:
+                # "login" is the name of the route created previously
+                login_path: login
+                check_path: login
+                enable_csrf: true
+
+            # Remember me feature
+            remember_me:
+                secret: '%kernel.secret%' # required
+                lifetime: 604800 # 1 week in seconds
+                # by default, the feature is enabled by checking a
+                # checkbox in the login form (see below), uncomment the
+                # following line to always enable it.
+                #always_remember_me: true
+
+            # Logout feature
+            logout:
+                path: app_logout
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
