--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,6 +52,7 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: '^/profile', roles: ROLE_USER }
 
 when@test:
     security:
