Added cancel outing feature

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -53,6 +53,7 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: '^/profil', roles: ROLE_USER }
+        - { path: '^/sortie', roles: ROLE_USER }
 
 when@test:
     security:
