--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,7 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    globals:
+        profile_pictures_directory: '%kernel.project_dir%/public/uploads/profile_pictures'
 
 when@test:
     twig:
