--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,7 +1,8 @@
 vich_uploader:
     db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    mappings:
+        profile_pictures:
+            uri_prefix: /images/profiles
+            upload_destination: '%kernel.project_dir%/public/uploads/profile_pictures'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
