--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,3 +6,5 @@ vich_uploader:
             uri_prefix: /images/profiles
             upload_destination: '%kernel.project_dir%/public/uploads/profile_pictures'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
+            delete_on_update: true
+            delete_on_remove: true
