--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,5 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
-###> phpunit/phpunit ###
-/phpunit.xml
-.phpunit.result.cache
-###< phpunit/phpunit ###
-
 /.idea
+/public/uploads/
