--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,7 +3,7 @@ vich_uploader:
 
     mappings:
         profile_pictures:
-            uri_prefix: /images/profiles
+            uri_prefix: /uploads/profile_pictures
             upload_destination: '%kernel.project_dir%/public/uploads/profile_pictures'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
             delete_on_update: true
