--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,8 +3,8 @@ vich_uploader:
 
     mappings:
         profile_pictures:
-            uri_prefix: /uploads/profile_pictures
-            upload_destination: '%kernel.project_dir%/public/uploads/profile_pictures'
+            uri_prefix: '%profile_pictures%'
+            upload_destination: '%kernel.project_dir%/public%profile_pictures%'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
             delete_on_update: true
             delete_on_remove: true
