--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -53,10 +53,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: '^/profil', roles: ROLE_USER }
         - { path: '^/sortie', roles: ROLE_USER }
+        - { path: '^/accueil', roles: ROLE_USER }
 
 when@test:
     security:
