--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "easycorp/easyadmin-bundle": "^3.5",
         "knplabs/knp-paginator-bundle": "^5.8",
         "league/csv": "^9.8",
+        "mailjet/mailjet-apiv3-php": "^1.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
         "sensio/framework-extra-bundle": "^6.1",
@@ -30,6 +31,7 @@
         "symfony/http-client": "5.4.*",
         "symfony/intl": "5.4.*",
         "symfony/mailer": "5.4.*",
+        "symfony/mailjet-mailer": "5.4.*",
         "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.4.*",
