--- a/public/.htaccess
+++ b/public/.htaccess
@@ -31,10 +31,10 @@ DirectoryIndex index.php
     RewriteRule .* - [E=BASE:%1]
 
     # Sets the HTTP_AUTHORIZATION header removed by Apache
-#    RewriteCond %{HTTP:Authorization} .+
-#    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
-    RewriteCond %{HTTPS} off
-    RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    RewriteCond %{HTTP:Authorization} .+
+    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
+    RewriteCond %{SERVER_PORT} 80
+    RewriteRule ^(.*)$ https://website.com/$1 [R=301,L]
     # Redirect to URI without front controller to prevent duplicate content
     # (with and without `/index.php`). Only do this redirect on the initial
     # rewrite by Apache and not on subsequent cycles. Otherwise we would get an
