--- a/public/.htaccess
+++ b/public/.htaccess
@@ -34,7 +34,7 @@ DirectoryIndex index.php
     RewriteCond %{HTTP:Authorization} .+
     RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
     RewriteCond %{SERVER_PORT} 80
-    RewriteRule ^(.*)$ https://website.com/$1 [R=301,L]
+    RewriteRule ^(.*)$ https://app-eni-sortir.herokuapp.com/$1 [R=301,L]
     # Redirect to URI without front controller to prevent duplicate content
     # (with and without `/index.php`). Only do this redirect on the initial
     # rewrite by Apache and not on subsequent cycles. Otherwise we would get an
