--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -53,10 +53,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: '^/admin', roles: ROLE_ADMIN, requires_channel: https }
-        - { path: '^/profil', roles: ROLE_USER, requires_channel: https }
-        - { path: '^/sortie', roles: ROLE_USER, requires_channel: https }
-        - { path: '^/$', roles: ROLE_USER, requires_channel: https }
+#- { path: '^/admin', roles: ROLE_ADMIN, requires_channel: https }
+    ##        - { path: '^/profil', roles: ROLE_USER, requires_channel: https }
+    ##        - { path: '^/sortie', roles: ROLE_USER, requires_channel: https }
+    ##        - { path: '^/$', roles: ROLE_USER, requires_channel: https }
+        - { path: '^/admin', roles: ROLE_ADMIN }
+        - { path: '^/profil', roles: ROLE_USER }
+        - { path: '^/sortie', roles: ROLE_USER }
+        - { path: '^/$', roles: ROLE_USER }
 
 when@test:
     security:
