--- a/public/.htaccess
+++ b/public/.htaccess
@@ -53,8 +53,8 @@ DirectoryIndex index.php
     # If the requested filename exists, simply serve it.
     # We only want to let Apache serve files and not directories.
     # Rewrite all other queries to the front controller.
-#    RewriteCond %{REQUEST_FILENAME} !-f
-#    RewriteRule ^ %{ENV:BASE}/index.php [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ %{ENV:BASE}/index.php [L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
