--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,7 +19,7 @@ DirectoryIndex index.php
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteCond %{SERVER_PORT} 80
+    RewriteCond %{HTTPS} !=on
     RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
     # Determine the RewriteBase automatically and set it as environment variable.
