--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -57,10 +57,11 @@ security:
     ##        - { path: '^/profil', roles: ROLE_USER, requires_channel: https }
     ##        - { path: '^/sortie', roles: ROLE_USER, requires_channel: https }
     ##        - { path: '^/$', roles: ROLE_USER, requires_channel: https }
-        - { path: '^/admin', roles: ROLE_ADMIN }
-        - { path: '^/profil', roles: ROLE_USER }
-        - { path: '^/sortie', roles: ROLE_USER }
-        - { path: '^/$', roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN, requires_channel: https }
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: '^/profil', roles: ROLE_USER, requires_channel: https  }
+        - { path: '^/sortie', roles: ROLE_USER, requires_channel: https  }
+        - { path: '^/$', roles: ROLE_USER, requires_channel: https  }
 
 
 when@test:
