--- a/public/.htaccess
+++ b/public/.htaccess
@@ -31,8 +31,8 @@ DirectoryIndex index.php
     RewriteRule .* - [E=BASE:%1]
 
     # Sets the HTTP_AUTHORIZATION header removed by Apache
-#    RewriteCond %{HTTP:Authorization} .+
-#    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
+    RewriteCond %{HTTP:Authorization} .+
+    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
     RewriteCond %{SERVER_PORT} 80
     RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
