--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,9 @@
+RewriteEngine On
+
+# D'abord on redirige tout sur le https
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*) https://%{SERVER_NAME}/$1 [R,L]
+
 # Use the front controller as index file. It serves as a fallback solution when
 # every other rewrite/redirect fails (e.g. in an aliased environment without
 # mod_rewrite). Additionally, this reduces the matching process for the
