--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,3 @@
-RewriteEngine On
-
-# D'abord on redirige tout sur le https
-RewriteCond %{HTTPS} !=on
-RewriteRule ^(.*) https://%{SERVER_NAME}/$1 [R,L]
 
 # Use the front controller as index file. It serves as a fallback solution when
 # every other rewrite/redirect fails (e.g. in an aliased environment without
@@ -25,7 +20,9 @@ DirectoryIndex index.php
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
-
+    # D'abord on redirige tout sur le https
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^(.*) https://%{SERVER_NAME}/$1 [R,L]
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
@@ -37,8 +34,8 @@ DirectoryIndex index.php
     RewriteRule .* - [E=BASE:%1]
 
     # Sets the HTTP_AUTHORIZATION header removed by Apache
-    RewriteCond %{HTTP:Authorization} .+
-    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
+    RewriteCond %{HTTPS:Authorization} .+
+    RewriteRule ^ - [E=HTTPS_AUTHORIZATION:%0]
 
 
     # Redirect to URI without front controller to prevent duplicate content
