--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,9 +20,7 @@ DirectoryIndex index.php
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    # D'abord on redirige tout sur le https
-    RewriteCond %{HTTPS} !=on
-    RewriteRule ^(.*) https://%{SERVER_NAME}/$1 [R,L]
+
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
@@ -35,7 +33,7 @@ DirectoryIndex index.php
 
     # Sets the HTTP_AUTHORIZATION header removed by Apache
     RewriteCond %{HTTP:Authorization} .+
-    RewriteRule ^ - [E=HTTPS_AUTHORIZATION:%0]
+    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
 
 
     # Redirect to URI without front controller to prevent duplicate content
