--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -54,7 +54,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: '^/admin', roles: ROLE_ADMIN }
-        - { path: '^/connexion', roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/connexion, roles: PUBLIC_ACCESS, requires_channel: https }
         # catch all other URLs
         - { path: '^/', roles: ROLE_USER }
 
