--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -55,6 +55,8 @@ security:
     access_control:
         - { path: '^/admin', roles: ROLE_ADMIN }
         - { path: ^/connexion, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/oubli, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
         # catch all other URLs
         - { path: '^/', roles: ROLE_USER }
 
