Added registration form

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -57,6 +57,7 @@ security:
         - { path: ^/connexion, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/oubli, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/reinit, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
         # catch all other URLs
         - { path: '^/', roles: ROLE_USER }
